# Build-GenAI-Course-DataScienceWorld.Kan

./: .gitignore  AGENTS.md
unit01/: dataset.py  model.py  train.py
unit04/: ner.py  squad.py  squad_debug.py  squad_qa.py  transformer.py
unit05/: explore_amazon.py  main.py  sentiment_analysis.py  tfidf_approach.md
unit05/data/: test_set_samples.csv  training_set_samples.csv
unit05/models/: sentiment_model.pkl  tfidf_vectorizer.pkl
unit06/: README.md  analyze.py  main.py  requirements.txt
unit07/: rag_poc_math.py
unit07/math-documents/: 01.md  02.md
unit08/: README.md  data_processing.py  finance_data.txt  finance_keywords.txt  hr_data.txt  hr_keywords.txt  main.py  prompts.py  requirements.txt  routing.py  text_processing.py
unit09/: README.md
unit09/chinook/: chinook.py  requirements.txt
unit09/stock-quant/: README.md  __init__.py  agent_graph.py  agent_types.py  app.py  config.py  data_collector.py  example_stock_data.py  node_planner.py  node_python_agent.py  node_step_back.py  node_summary.py  pandas_ta-0.4.25b0-py3-none-any.whl  (+5 more)
unit10/: .gitignore  README.md  main.py  requirements.txt  story_indexer.py
unit11/: README.md  __init__.py  agent_config.py  agent_execution.py  agent_planning.py  app.py  config.py  data_collector.py  example_stock_data.py  finance_report.py  llama_agent.py  llama_data_collector.py  llama_tool_finance_report.py  llama_tool_stock_price.py  llama_tool_technical_analysis.py  llama_tool_web_data.py  llama_tools.py  llama_types.py  logger.py  multi_agent_system.py  requirements.txt  tech_analysis.py  test_fpt.py  test_multi_agent.py  test_simple.py  test_vic.py
unit12/: Makefile  README.md  app.py  build_index.py  build_utils.py  colab.py.bk  const.py  docker-compose.yml  graph_rag_extractor.py  graph_rag_query_engine.py  graph_rag_store.py  html_to_md_converter.py  main.py  requirements.txt  setup_neo4j.sh  utils.py
unit13/: Lesson_2.md  Lesson_4.md  Lesson_6.md  Makefile  README.md  __init__.py  app.py  pyproject.toml
unit13/agents/: __init__.py  bitcoin_qa_agent.py
unit13/agents/tools/: __init__.py  market_data.py  news_fetcher.py  price_fetcher.py  tavily_search.py  technical_analyzer.py
unit13/agents/workflows/: qa_workflow.py
unit13/tests/: __init__.py  test_market_data.py  test_news_fetcher.py  test_price_fetcher.py  test_technical_analyzer.py
unit14/: Makefile  README.md  app.py  db.py  pyproject.toml  requirements.txt
unit14/agents/: analysis_agent.py  information_agent.py  toeic_crew.py  tools.py  trading_agent.py
unit14/agents/tools/: price_fetcher.py  technical_analyzer.py
unit14/tests/: test_db.py  test_price_fetcher.py  test_technical_analyzer.py  test_tools.py
(+13 files in other folders)
