[tool.poetry]
name = "unit14"
version = "0.1.0"
description = "Bitcoin Trading System"
authors = ["DataScienceWorld"]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.12"
crewai = "0.130.0"
crewai_tools = "0.47.1"
langchain-community = "0.3.25"
pydantic = "^2.11"
yfinance = "*"
pandas = "*"
pandas_ta = "*"
requests = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
